--- a/resources/assets/styles/components/_header.scss
+++ b/resources/assets/styles/components/_header.scss
@@ -26,7 +26,7 @@
   @media (min-width: 767px) {
     position: relative;
     padding-right: 2em;
-    margin-right: 2em;
+    margin-right: 1.5em;
 
     &::after {
       background-color: #f5f5f5;
